# StarFEM

./: .gitignore  CMakeLists.txt  README.md  run_StarFEM.py  run_test.py
python_interface/: add_constitutive_laws_to_python.cpp
